# restAPI

./: CMakeLists.txt  CMakeSettings.json  README_library.md  cahireDesCharge-suite.md
frontEnd/: package-lock.json  package.json
frontEnd/src/: App.css  App.jsx  index.css  main.jsx
frontEnd/src/Components/: Footer.jsx  Header.jsx  Login.jsx  Register.jsx
frontEnd/src/context/: AuthContext.jsx
frontEnd/src/services/: api.js
src/: CORSMiddleware.h  CookieParser.h  JWTAuthMiddleware.cpp  JWTAuthMiddleware.h  User.h  UserManager.cpp  library.cpp  library.h  main.cpp  utils.h
